--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FiftyFifty",
+  "name": "ttttt",
   "version": "1.0.0",
   "description": "Example app for Pipedrive Marketplace",
   "engines": {
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.3",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "hbs": "^4.2.0",
     "knex": "^3.1.0",
