--- a/package.json
+++ b/package.json
@@ -1,30 +1,17 @@
 {
-  "name": "ttttt",
+  "name": "pipedrive-developerhub",
   "version": "1.0.0",
-  "description": "Example app for Pipedrive Marketplace",
-  "engines": {
-    "node": ">=16"
-  },
-  "repository": {
-    "type": "git",
-    "url": "http://github.com/pipedrive/FiftyFifty.git"
-  },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "IS_LOCAL=true PORT=3000 node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Siim Kibus",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "axios": "^1.7.3",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "hbs": "^4.2.0",
-    "knex": "^3.1.0",
-    "passport": "^0.7.0",
-    "passport-oauth2": "^1.8.0",
-    "path": "^0.12.7",
-    "sqlite3": "^5.1.7"
+    "@pipedrive/app-extensions-sdk": "^0.10.2",
+    "axios": "^1.7.7",
+    "express": "^4.19.2"
   }
 }
